# hrmdbq

./: .gitignore  404.html  README.md  angular.json  index.html  mkdocs.yml  package-lock.json  package.json
.github/workflows/: build-tauri.yml  documentation.yml
curation/: index.html
curation/enhancer/: index.html
curation/functional/: index.html
curation/hgvs/: index.html
curation/liftover/: index.html
curation/promoter/: index.html
curation/transcripts/: index.html
curation/utr5/: index.html
curation/variants/enhancer/: index.html
curation/variants/lincRNA/: index.html
curation/variants/mirna/: index.html
curation/variants/overview/: index.html
curation/variants/promoter/: index.html
curation/variants/rna/: index.html
curation/variants/splicing/: index.html
curation/variants/utr5/: index.html
developers/: index.html
docs/: curation.md  developers.md  finding.md  index.md
docs/curation/: enhancer.md  functional.md  hgvs.md  index.md  liftover.md  promoter.md  transcripts.md  utr5.md
docs/curation/variants/: rna.md  (+7 more)
finding/: index.html
search/: search_index.json
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dto/: citation.rs  curation_stats.rs  mod.rs  nc_variant_annotation.rs
src-tauri/src/ncvar/: mod.rs  ncvar_assessment.rs
src-tauri/src/util/: gene_curation.rs  generate_stats.rs  hgnc_rest.rs  mod.rs  pubmed_retriever.rs  settings.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
(+60 files in other folders)
