[package]
name = "hrmdbq"
version = "0.1.29"
description = "Curation of non-coding variant pathomechanism"
authors = ["Peter Robinson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hrmdbq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dirs = "6.0"
ga4ghphetools = { git = 'https://github.com/P2GX/ga4ghphetools.git', tag = '0.5.35' }
once_cell = "1.21.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version="2.6.0", default-features = false}
tauri-plugin-opener = "2.5.2"
tauri-plugin-fs = "2.4.4"
toml = "0.9.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1.12.3"
rfd = "0.16.0"



[dev-dependencies]
# flate2 = "1.0.30"
rstest = "0.26.1"
